# tipiak

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  tipiak_se.toml
.github/workflows/: code-quality.yml  docker-build.yml  format.yml  release-cli.yml
crates/libzim-rs/: Cargo.toml  README.md
crates/libzim-rs/examples/: basic.rs
crates/libzim-rs/src/: cache.rs  cluster.rs  dirent.rs  lib.rs  zimfile.rs  zimheader.rs
crates/tipiak-app/: Cargo.toml  Dioxus.toml  README.md  tipiak_app.toml
crates/tipiak-app/assets/: main.css
crates/tipiak-app/src/: app.rs  config.rs  constants.rs  main.rs  router.rs  utils.rs
crates/tipiak-app/src/api/: completion.rs  config.rs  media.rs  mod.rs  search.rs
crates/tipiak-app/src/components/: file.rs  file_preview.rs  filters_bar.rs  font.rs  header.rs  mod.rs  search_bar.rs
crates/tipiak-app/src/routes/: home.rs  mod.rs  search_result.rs
crates/tipiak-cli/: Cargo.toml
crates/tipiak-cli/src/: main.rs
crates/tipiak-cli/src/commands/: crawl.rs  mod.rs  search.rs  watch.rs
crates/tipiak-search-engine/: Cargo.toml
crates/tipiak-search-engine/src/: config.rs  constants.rs  crawler.rs  db_utils.rs  lib.rs  queries.rs  searcher.rs
crates/tipiak-search-engine/src/db/: queries.rs
crates/tipiak-search-engine/src/metadata/: exif_metadata_extractor.rs  extractor.rs  id3_metadata_extractor.rs  iptc_metadata_extractor.rs  media_metadata.rs  mod.rs  registry.rs  xmp_metadata_extractor.rs
crates/tipiak-search-engine/src/models/: file.rs  file_type.rs  from_row.rs  mod.rs
crates/tipiak-search-engine/src/tokenizers/: exif_tokenizer.rs  file_name_tokenizer.rs  file_path_tokenizer.rs  id3_tokenizer.rs  iptc_tokenizer.rs  metadata_tokenizer.rs  mod.rs  paragraph_tokenizer.rs  registry.rs  title_tokenizer.rs  tokenizer.rs  xmp_tokenizer.rs  zim_tokenizer.rs
crates/tipiak-search-engine/src/utils/: db_utils.rs  fs_utils.rs  mod.rs  token_utils.rs
docs/: default_file_types.md
