[package]
name = "tipiak-app"
version = "0.1.0"
authors = ["MF_ZOOL <lo.montant047@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
tracing = "0.1.44"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tipiak-search-engine = { path = "../tipiak-search-engine" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
