[package]
name = "tipiak-app"
version = "0.1.0"
authors = ["MF_ZOOL <lo.montant047@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
gloo-net = "0.6.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.0.2"
tracing = "0.1.44"
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }
mime_guess = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tipiak-search-engine = { path = "../tipiak-search-engine" }

[target.'cfg(feature = "server")'.dependencies]
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:axum",      
    "dep:tokio",     
    "dep:tokio-util",
]