[package]
name = "tipiak-search-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dyn-fmt = "0.4.3"
id3 = "1.16.4"
iptc = "0.3.0"
kamadak-exif = "0.6.1"
log = "0.4.29"
quick-xml = "0.39.0"
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
simple_logger = "5.1.0"
toml = "0.9.11"
walkdir = "2.5.0"

libzim-rs = { path = "../libzim-rs" }
stop-words = "0.10.0"
rayon = "1.12.0"
memchr = "2.7"